# MachineLearnia-Module-9-GenerativeAI

./: chain.py  prompts.py  pyproject.toml  test_functions.ipynb
ChatAI/: chatAI.ipynb
ChatAI/api/: chain.py  main.py  mozart_summary.txt
